--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -237,13 +237,13 @@ body {
 }
 
 .upload-image-container {
-    position: absolute;
+    position: fixed;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 0.8rem;
-    bottom: 23px;
+    bottom: 4rem;
     left: 50%;
     transform: translateX(-50%);
     width: fit-content;
@@ -258,6 +258,30 @@ body {
     }
     &:hover {
         opacity: 0.7;
+    }
+}
+@media (max-width: 768px) {
+    .upload-image-container {
+        position: fixed;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 0.2rem;
+        bottom: 1.5vh;
+        left: 20%;
+        width: fit-content;
+        height: fit-content;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        background-color: #fff;
+        z-index: 999;
+        transition: opacity 0.3s ease;
+        & p {
+            margin: 0;
+        }
+        &:hover {
+            opacity: 0.7;
+        }
     }
 }
 
